# Lang2Pose

./: .gitignore  .gitmodules  README.md  docker-compose.yml
docker/: DockerFile  llm_agent.DockerFile
resources/extensions/: extension.toml  omni.isaac.sim.base.kit
resources/extensions/lang2pose/: __init__.py  lang2pose.py  lang2pose_extension.py  ppcmd_receiver.py
resources/llmagent/src/aiagent/: package.xml  setup.py
resources/llmagent/src/aiagent/aiagent/: realrobot.py  simrobot.py
